--- a/pom.xml
+++ b/pom.xml
@@ -127,4 +127,20 @@
 			<version>1.5</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<!-- 编译插件:指定编译环境(jre,coding) -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
