--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,10 +1,10 @@
 #core db
 sp.jdbc.driver=com.mysql.jdbc.Driver
 sp.jdbc.host=localhost:3306
-sp.jdbc.database=test1
+sp.jdbc.database=test
 sp.jdbc.url=jdbc:mysql://${sp.jdbc.host}/${sp.jdbc.database}?characterEncoding=utf-8
 sp.jdbc.username=root
-sp.jdbc.password=567118
+sp.jdbc.password=root
 sp.jdbc.minPoolSize=2
 sp.jdbc.maxIdleTime=1800
 sp.jdbc.maxPoolSize=10
@@ -20,7 +20,7 @@ common.jdbc.host=localhost:3306
 common.jdbc.database=test2
 common.jdbc.url=jdbc:mysql://${common.jdbc.host}/${common.jdbc.database}?characterEncoding=utf-8
 common.jdbc.username=root
-common.jdbc.password=567118
+common.jdbc.password=root
 common.jdbc.minPoolSize=2
 common.jdbc.maxIdleTime=1800
 common.jdbc.maxPoolSize=10
