--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,19 +1,19 @@
 #core db
-sp.jdbc.driver=com.mysql.jdbc.Driver
-sp.jdbc.host=localhost:3306
-sp.jdbc.database=test
-sp.jdbc.url=jdbc:mysql://${sp.jdbc.host}/${sp.jdbc.database}?characterEncoding=utf-8
-sp.jdbc.username=root
-sp.jdbc.password=root
-sp.jdbc.minPoolSize=2
-sp.jdbc.maxIdleTime=1800
-sp.jdbc.maxPoolSize=10
-sp.jdbc.initialPoolSize=2
+test.jdbc.driver=com.mysql.jdbc.Driver
+test.jdbc.host=localhost:3306
+test.jdbc.database=test
+test.jdbc.url=jdbc:mysql://${sp.jdbc.host}/${sp.jdbc.database}?characterEncoding=utf-8
+test.jdbc.username=root
+test.jdbc.password=root
+test.jdbc.minPoolSize=2
+test.jdbc.maxIdleTime=1800
+test.jdbc.maxPoolSize=10
+test.jdbc.initialPoolSize=2
 #default is 3
-sp.jdbc.numHelperThreads=2
+test.jdbc.numHelperThreads=2
 #10 minutes\u68c0\u67e5\u4e00\u6b21\u94fe\u63a5\u662f\u5426\u6b63\u5e38
-sp.jdbc.idleConnectionTestPeriod=600
-sp.jdbc.preferredTestQuery=select 1
+test.jdbc.idleConnectionTestPeriod=600
+test.jdbc.preferredTestQuery=select 1
 
 common.jdbc.driver=com.mysql.jdbc.Driver
 common.jdbc.host=localhost:3306
