--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@
 test.jdbc.driver=com.mysql.jdbc.Driver
 test.jdbc.host=localhost:3306
 test.jdbc.database=test
-test.jdbc.url=jdbc:mysql://${sp.jdbc.host}/${sp.jdbc.database}?characterEncoding=utf-8
+test.jdbc.url=jdbc:mysql://${test.jdbc.host}/${test.jdbc.database}?characterEncoding=utf-8
 test.jdbc.username=root
 test.jdbc.password=root
 test.jdbc.minPoolSize=2
